--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "popper.js": "^1.12"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.5.0",
         "admin-lte": "^3.0.0-alpha.2"
     }
 }
