--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.5.0",
         "admin-lte": "^3.0.0-alpha.2",
-        "inputmask": "^4.0.4"
+        "inputmask": "^4.0.4",
+        "sweetalert": "^2.1.2"
     }
 }
