--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.5.0",
         "admin-lte": "^3.0.0-alpha.2",
+        "datatables.net": "^1.10.19",
+        "datatables.net-dt": "^1.10.19",
         "inputmask": "^4.0.4",
         "sweetalert": "^2.1.2"
     }
