--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
     },
-    "autoload": {
+    "autoload": {        
+        "files": [
+          "app/Http/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
