--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "autoload": {        
         "files": [
-          "app/Http/helpers.php"
+          "app/Http/helpers.php",
+          "app/Http/constants.php"
         ],
         "classmap": [
             "database/seeds",
