--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
         "spatie/laravel-permission": "^2.27"
     },
     "require-dev": {
