--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "datatables.net": "^1.10.19",
         "datatables.net-dt": "^1.10.19",
         "inputmask": "^4.0.4",
+        "laravel-echo": "^1.5.2",
+        "laravel-echo-server": "^1.5.0",
+        "socket.io-client": "^2.2.0",
         "sweetalert": "^2.1.2"
     }
 }
